# agente-de-ventas

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  corpus_topviajes.md  main.py
app/answering/: answerer.py  corpus.py
app/channels/: base.py  twilio.py
app/concurrency/: buffer.py  config.py  debounce.py  dedup.py  flush.py  handoff.py  inactivity.py  keys.py  lock.py  mirror.py  rate_limit.py
app/crm/: kommo_chats.py  kommo_crm.py  kommo_inbound.py  kommo_mapping_topviajes.py  kommo_signing.py  lead_payload.py  relay.py
app/domain/: chat_connection.py  chat_mirror.py  completeness.py  concepts.py  handoff_note.py  handoff_orchestration.py  inactivity.py  models.py  orchestrator.py  state.py
app/llm/: base.py  gemini.py  retry.py
app/routing/: campaign.py
app/storage/: migrate.py  postgres.py
scripts/: add_test_note.py  connect_kommo_channel.py  find_create_lead.py  send_test_message.py  update_test_lead.py
tests/: fakes.py  test_answering.py  test_chat_connection.py  test_chat_mirror.py  test_completeness.py  test_concurrency.py  test_descriptors.py  test_gemini_reroll.py  test_gemini_transient.py  test_handoff.py  test_handoff_note.py  test_handoff_orchestration.py  test_inactivity.py  test_kommo_chats.py  test_kommo_crm.py  test_kommo_inbound.py  test_kommo_signing.py  test_kommo_webhook.py  test_lead_payload.py  test_mirror.py  test_orchestrator.py  test_parse_incoming.py  test_retry.py  test_routing.py  test_state.py  test_storage.py  test_storage_postgres.py  test_understanding.py  test_webhook.py
(+3 files in other folders)
