[project]
name = "whatsapp-echo-agent"
version = "0.1.0"
description = "Walking skeleton: WhatsApp echo agent via Twilio"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "strict"
# Strict applies to production code. Tests exercise an untyped TestClient/httpx
# surface where strict's unknown-type reports add noise without catching bugs.
include = ["app"]
# The Twilio SDK ships no type stubs; don't fail strict mode over the SDK boundary.
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
